v0.0.1/modules/schema/pages/class/GovSteam0.adoc
= `GovSteam0`
:toclevels: 4


+++A simplified steam turbine governor.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovSteam0`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovSteam0`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
GovSteam0 {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



















AsynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



TurbineLoadControllerDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



SynchronousMachineDynamics {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}












GovSteam0 -> AsynchronousMachineDynamics: AsynchronousMachineDynamics


GovSteam0 -> TurbineLoadControllerDynamics: TurbineLoadControllerDynamics


GovSteam0 -> SynchronousMachineDynamics: SynchronousMachineDynamics


GovSteam0 -> DiagramObject: DiagramObjects


GovSteam0 -> InstanceSet: InstanceSet


GovSteam0 -> Name: Names


GovSteam0 -> ChangeSetMember: PropertiesCIMDataObject


GovSteam0 -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<dt,`dt`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Turbine damping coefficient (<i>Dt</i>).  Unit = delta P / delta speed. Typical value = 0.+++

| <<mwbase,`mwbase`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

| <<r,`r`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>).  Typical value = 0,05.+++

| <<t1,`t1`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Steam bowl time constant (<i>T1</i>) (&gt; 0).  Typical value = 0,5.+++

| <<t2,`t2`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Numerator time constant of <i>T2</i>/<i>T3</i> block (<i>T2</i>) (&gt;= 0).  Typical value = 3.+++

| <<t3,`t3`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Reheater time constant (<i>T3</i>) (&gt; 0).  Typical value = 10.+++

| <<vmax,`vmax`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Maximum valve position, PU of <i>mwcap</i> (<i>Vmax</i>) (&gt; GovSteam0.vmin).  Typical value = 1.+++

| <<vmin,`vmin`>>
| 0..1
| xref::class/PU.adoc[`PU`]
| +++Minimum valve position, PU of <i>mwcap</i> (<i>Vmin</i>) (&lt; GovSteam0.vmax).  Typical value = 0.+++

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<enabled,`enabled`>>
| 0..1
| https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#dt]
=== `dt`
+++Turbine damping coefficient (<i>Dt</i>).  Unit = delta P / delta speed. Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.dt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#r]
=== `r`
+++Permanent droop (<i>R</i>).  Typical value = 0,05.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.r`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#t1]
=== `t1`
+++Steam bowl time constant (<i>T1</i>) (&gt; 0).  Typical value = 0,5.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t2]
=== `t2`
+++Numerator time constant of <i>T2</i>/<i>T3</i> block (<i>T2</i>) (&gt;= 0).  Typical value = 3.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#t3]
=== `t3`
+++Reheater time constant (<i>T3</i>) (&gt; 0).  Typical value = 10.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

//[discrete]
[#vmax]
=== `vmax`
+++Maximum valve position, PU of <i>mwcap</i> (<i>Vmax</i>) (&gt; GovSteam0.vmin).  Typical value = 1.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.vmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

//[discrete]
[#vmin]
=== `vmin`
+++Minimum valve position, PU of <i>mwcap</i> (<i>Vmin</i>) (&lt; GovSteam0.vmax).  Typical value = 0.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:GovSteam0.vmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===


